<resources>
    <string name="app_name">JustCodeHW4</string>
    <string name="smartr">Smartr</string>
    <string name="portal">SmartRecruiters candidate portal is now Smartr.</string>
    <string name="login">Enter the same login info used for your SmartrProfile</string>
    <string name="save">If login details were saved, you may need to re-save.</string>
    <string name="marketing">Why Smartr? Read here</string>
    <string name="started">Get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Jobs Name-->
    <string name="Mobile_Developer_Senior"> Mobile Developer Senior </string>
    <string name="Mobile_Developer_Junior"> Mobile Developer Junior</string>
    <string name="Mobile_Developer"> Mobile Developer</string>
    <string name="Web_Developer_Senior"> Web Developer Senior</string>
    <string name="Web_Developer_Junior"> Web Developer Junior</string>
    <string name="Web_Developer">Web Developer</string>
    <string name="Database_Administrator_Senior"> Database Administrator Senior</string>
    <string name="Database_Administrator_Junior"> Database Administrator Junior</string>
    <string name="Database_Administrator">Database Administrator</string>
    <string name="Systems_Analyst">Systems Analyst</string>
    <string name="UX_developer_Senior"> UX developer Senior</string>
    <string name="UX_developer_Junior"> UX developer Junior</string>
    <string name="UX_developer">UX developer</string>
    <string name="Machine_Learning_Engineer">Machine Learning Engineer</string>
    <string name="Backend_developer_Senior"> Backend developer Senior</string>
    <string name="Backend_developer_Junior"> Backend developer Junior</string>
    <string name="Backend_developer">Backend developer</string>
    <string name="Front_end_Developer_Senior"> Front end Developer Senior</string>
    <string name="Front_end_Developer_Junior"> Front end Developer Junior</string>
    <string name="Front_end_Developer">Front end Developer</string>



</resources>