<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_for_main_page"
    android:orientation="vertical"
    tools:context=".fragments.MainFragment">
    <!--title tv-->
    <TextView
        android:id="@+id/titleTv"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/smartr"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--img sing up/in-->
    <ImageView
        android:id="@+id/userImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <!--desc Tv-->
    <TextView
        android:id="@+id/descriptionTv"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fresh look, same login."
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTv">
        <!--CnsL first-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--icon first-->
            <ImageView
                android:id="@+id/iconPortal"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="3"
                android:text="@string/portal"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/iconPortal"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--CnsL SECOND-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constSecond"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constFirst">
            <!--icon first-->
            <ImageView
                android:id="@+id/iconLogin"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="3"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/iconLogin"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--CnsL Third-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constThird"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constSecond">
            <!--icon first-->
            <ImageView
                android:id="@+id/iconSave"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxLines="3"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/iconSave"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Marketing-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marketing"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constCenter" />
    <!--Btn Get started-->
    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_for_btns"
        android:padding="5dp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:text="@string/started"
        android:textColor="#347460"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>